# mytardis_ime

./: .buildinfo  .gitignore  .pylintrc  MainWindow.py  MainWindow.ui  README.md  add-files-wizard.ui  app.py  datafile-group-props.ui  dataset-props.ui  default-prop.ui  default.qrc  default_rc.py  experiment-props.ui  extraction.py  genindex.html  index.html  metadata.ui  metadata.yaml  metadata_tab.py  models.py  mytardis_ime.code-workspace  mytardismetadataeditor.py  mytardismetadataeditor.pyproject  objects.inv  project-props.ui  pyimagej.py  pyinstaller.spec  pyproject.toml  pyvenv.cfg  search.html  searchindex.js  test.yaml  test_libby.yaml  test_metadata_tab.py  test_renaming.yaml  test_renaming_exported_update.yaml
.github/workflows/: Test and lint.yml  build-executables.yml  upload-documentation-to-gh-pages.yml
docs/: conf.py  data-dictionary.rst  download_and_run.rst  index.rst  overview.rst  prerequisites.rst  structure_your_data.rst  tutorial.rst
docs/instruction/: step_by_step_instruction.rst
docs/tutorial/: data-dictionary.rst  identifiers.rst
docs/tutorial-first-dataset/: access-control.rst  decide-structure.rst  export.rst  import-data.rst  import-result.xcf  index.rst  metadata.rst
docs/user/: adding-to-existing-structure.rst  data-dictionary.rst  finding-instrument-id.rst  what-is-wizard.rst
idw/: models.py
idw/blueprints/: custom_data_types.py
ime/: bindable.py  models.py  mytardismetadataeditor.py  mytardismetadataeditor_backup.py  qt_models.py  utils.py  yaml_helpers.py
ime/blueprints/: custom_data_types.py
ime/parser/: image_parser.py  parsers.py  qt_extraction_worker.py
ime/tests/: conftest.py  fixtures.yaml  fixtures_access_control_tab.yaml  fixtures_example.yaml  fixtures_qt_models.yaml  ingestion.yaml  metadata.yaml  metadata_2-1.yaml  test_access_control_tab.py  test_image_parser.py  test_loadYaml.py  test_metadata_tab.py  test_project_for_experiment.py  test_qt_models.py
ime/ui/: AddFilesWizard.py  MainWindow.py  MainWindow.ui  add-files-wizard.ui  ui_access_control_list.py  ui_access_control_list.qml  ui_access_control_list.ui  ui_access_control_tab.py  ui_access_control_tab.ui  ui_add_files_wizard.py  ui_add_files_wizard.ui  ui_add_files_wizard_skip.py  (+29 more)
resources/: default.qrc
scripts/: rcc.sh  uic.py
test/: fixtures.yaml  test.yaml
ui/: MainWindow.py  MainWindow.ui  MetadataTab.py  MetadataTab.ui  add-files-wizard.ui
user/: adding-to-existing-structure.html  data-dictionary.html  finding-instrument-id.html  what-is-wizard.html
(+57 files in other folders)
