[tool.poetry]
name = "mytardis-ime"
version = "0.1.0"
description = "An ingestion metadata editor for MyTardis"
authors = ["Noel <noel.zeng@auckland.ac.nz>", "Libby Li <libby.li@auckland.ac.nz>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
PyYAML = "^6.0"
pydantic = "^1.10.7"
schema = "^0.7.5"
oiffile = "^2022.9.29"
numpy = "^1.25.0"
xmltodict = "^0.13.0"
wheel = "^0.40.0"
jsonschema = "^4.17.3"
pyimagej = "^1.4.1"
scyjava = "^1.9.1"
jpype1 = "^1.4.1"
pyside6 = "^6.6.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.13.9"
rope = "^1.1.1"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-qt = "^4.1.0"
pyinstaller = "^5.3"
watchdog = "^2.1.9"
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath="."
